# autonovel

./: .env.example  .gitignore  ANTI-SLOP.md  CLAUDE.md  FUTURE-TODOS.md  README.md  REWRITE-PLAN.md  ROADMAP.md  STATE.md  package.json  pyproject.toml
.github/workflows/: smoke-weekly.yml  test.yml
commands/: add-character.md  add-source.md  add-subplot.md  adversarial-edit.md  appendix.md  apply-cuts.md  art-curate.md  art-directions.md  art-import.md  art-ornaments-all.md  art-pick.md  art-prompts.md  art-style.md  art-vectorize.md  audiobook-assemble.md  audiobook-generate.md  audiobook-script.md  audiobook-voices.md  brief.md  chapter-summary.md  check-anachronism.md  compare-models.md  cover-composite.md  cover-print.md  dashboard.md  deepen-character.md  dialogue.md  draft-pass.md  draft.md  evaluate.md  extract-chapter-titles.md  foreshadow.md  gen-canon.md  gen-characters.md  gen-outline.md  gen-world.md  glossary.md  help.md  impact-of.md  import-book.md  (+44 more)
docs/: adding-a-genre-fixture.md  chapter-frontmatter.md  commands.md  impl-plan-movie-teaser.md  lessons-from-author-testing.md  multi-book.md  operating-guide.md  prd-movie-teaser-mode.md  scanner-audit.md  series-layout.md  teaser-craft.md  teaser-render-providers.md  testing.md  troubleshooting.md  writing-a-historical-series.md
src/autonovel/: __init__.py  checkpoints.py  cli.py  command_log.py  context_loader.py  cost.py  import_book.py  import_foundation.py  install_export_tools.py  last_action.py  lock.py  onboard.py  paths.py  project.py  promote_canon.py  tui.py
src/autonovel/adapters/: __init__.py  base.py  claude_code.py  codex.py  detect.py  gemini.py  installer.py
src/autonovel/export/: __init__.py  cover.py  landing.py  wikimedia.py
src/autonovel/housekeeping/: __init__.py  doctor.py  lifecycle.py  next_actions.py  next_step.py  plates.py  rollback.py  scaffold.py  status.py  statusline.py  statusline_setup.py  sweep_progress.py  test_fixture.py
src/autonovel/mechanical/: __init__.py  __main__.py  audio.py  back_matter.py  chapter_summary.py  chapter_titles.py  cliches.py  cuts.py  dashboard.py  dialogue.py  entity_track.py  epub.py  front_matter.py  frontmatter.py  impact.py  latex.py  motifs.py  period_register.py  pov_bleed.py  research_index.py  scenes.py  sensory.py  series_arc.py  show_dont_tell.py  slop.py  spine.py  summary_query.py  timeline.py  typeset.py  vagueness.py
src/autonovel/teaser/: __init__.py  assemble.py  backends.py  beats.py  critique.py  music.py  providers.py  quality.py  refmanifest.py  refs.py  render.py  render_prompt.py  shots.py  takes.py  vo.py
src/autonovel/templates/book/: seed.txt  state.json  voice.md
src/autonovel/templates/book/audiobook/: voices.yaml.example
src/autonovel/templates/series/: .gitignore  CLAUDE.md  project.yaml
src/autonovel/templates/series/shared/: canon.md  period_bans.txt  sources.bib
src/autonovel/templates/series/typeset/: epub_metadata.yaml  novel.tex
src/autonovel/validators/: __init__.py  chapter_frontmatter.py  command_schema.json  events.py
tests/: conftest.py
tests/contracts/: test_command_contract.py
tests/deterministic/: conftest.py  test_adapter.py  test_adapter_codex.py  test_adapter_gemini.py  test_back_matter.py  test_chapter_frontmatter.py  test_chapter_titles.py  test_checkpoints.py  test_ci_workflows.py  test_cli.py  test_command_frontmatter.py  test_command_log.py  test_command_schema.py  test_context_loader.py  test_cost.py  test_directory_nesting.py  test_doctor.py  test_evaluate_series_phase.py  test_evaluate_show_dont_tell.py  test_events_validator.py  test_export_extras_smoke.py  test_flakiness_hook.py  test_impact_of.py  test_import_book.py  test_import_foundation.py  test_install_export_tools.py  test_install_immutability.py  test_integration_pipeline.py  test_last_action.py  test_late_stage_book.py  test_lifecycle.py  test_lock.py  test_mechanical_audio.py  test_mechanical_chapter_summary.py  test_mechanical_cuts.py  test_mechanical_dashboard.py  test_mechanical_dialogue.py  test_mechanical_entity_track.py  test_mechanical_epub.py  test_mechanical_front_matter.py  (+62 more)
tests/fixtures/bells-reference/: README.md  scores.json
tests/fixtures/tiny-series-fantasy/: README.md  project.yaml
tests/fixtures/tiny-series-fantasy/books/book-one/: outline.md  seed.txt
tests/fixtures/tiny-series-fantasy/landing/: template.html
tests/fixtures/tiny-series-fantasy/shared/: sources.bib
tests/fixtures/tiny-series-historical/: .gitignore  README.md  project.yaml
tests/fixtures/tiny-series-historical/.autonovel/: state.json
tests/fixtures/tiny-series-historical/books/tiny-inquisitor/: outline.md  pending_canon.md  seed.txt  state.json  voice.md
tests/fixtures/tiny-series-historical/shared/: MYSTERY.md  canon.md  characters.md  events.md  period_bans.txt  sources.bib  timeline.md  world.md
tests/fixtures/tiny-series-horror/: README.md  project.yaml
tests/fixtures/tiny-series-literary/: README.md  project.yaml
tests/fixtures/tiny-series-literary/shared/: world.md
tests/fixtures/tiny-series-literary/typeset/: epub_colophon.md
tests/fixtures/tiny-series-mystery/: README.md  project.yaml
tests/fixtures/tiny-series-mystery/shared/: characters.md  period_bans.txt
tests/fixtures/tiny-series-romance/: README.md  project.yaml
tests/fixtures/tiny-series-romance/typeset/: epub_front_matter.md
tests/fixtures/tiny-series-scifi/: README.md  project.yaml
tests/fixtures/tiny-series-scifi/shared/: MYSTERY.md  events.md  timeline.md  world.md
tests/fixtures/tiny-series-thriller/: README.md  project.yaml
tests/fixtures/tiny-series-thriller/.autonovel/: state.json
tests/smoke/: conftest.py  test_bells_regression.py  test_codex_smoke.py  test_draft_smoke.py  test_fantasy_smoke.py  test_foundation_smoke.py  test_gemini_smoke.py  test_historical_research.py  test_horror_smoke.py  test_literary_smoke.py  test_multi_book_smoke.py  test_mystery_smoke.py  test_pipx_install.py  test_revision_smoke.py  test_romance_smoke.py  test_scifi_smoke.py  test_thriller_smoke.py  test_typeset_smoke.py
(+11 files in other folders)
