[project]
name = "autonovel"
version = "0.2.0"
description = "Autonomous novel-writing pipeline (series-aware scaffold)."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    # For the §12 item 1 "retry failed smoke tests once" policy. Used by the
    # tests/conftest.py flakiness hook; harmless if absent (hook skips the
    # auto-retry gracefully).
    "pytest-rerunfailures>=14",
]
# PR 7 export commands that touch images and audio. Users who only draft
# and revise do not need these; `autonovel doctor` reports any that are
# missing as warnings (not problems) when the corresponding external CLI
# tool is also absent.
#   cover-composite, cover-print       → Pillow
#   audiobook-assemble                 → pydub (plus ffmpeg on PATH)
#   landing                            → (no extra Python — stdlib only)
# External CLI tools the commands shell out to (install via OS package
# manager; `autonovel doctor` enumerates what's missing):
#   tectonic     — PDF (typeset)
#   pandoc       — ePub (typeset)
#   potrace      — SVG vectorisation (art-vectorize)
#   ffmpeg       — m4b audiobook output (audiobook-assemble --format m4b)
#   rsvg-convert — SVG → PDF for print-quality ornaments (typeset --convert-vectors)
#   fontconfig   — EB Garamond / Bebas Neue lookup (cover-composite, cover-print)
export = [
    "Pillow>=10.0",
    "pydub>=0.25",
]

[project.scripts]
autonovel = "autonovel.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autonovel"]

[tool.hatch.build.targets.wheel.force-include]
"src/autonovel/templates" = "autonovel/templates"
"commands" = "autonovel/commands"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: Tier-3 smoke tests (costs money; opt-in)",
    "regression: Tier-4 evaluator regression (costs money; opt-in)",
    "genre(name): mark a smoke test with a genre label",
]
