[project]
name = "autonovel"
version = "0.2.0"
description = "Autonomous novel-writing pipeline (series-aware scaffold)."
# 3.11 floor matches what Debian 12 (Chromebook Linux container, WSL Ubuntu
# 22.04+, Raspberry Pi OS Bookworm) ships as the system Python. The
# codebase doesn't use any 3.12-only features (no `type X =` aliases, no
# `class X[T]:` generic syntax, no @override). If a user's default
# `python3` is older, point pipx at a newer one explicitly:
#     pipx install '.[export]' --python python3.13
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    # For the §12 item 1 "retry failed smoke tests once" policy. Used by the
    # tests/conftest.py flakiness hook; harmless if absent (hook skips the
    # auto-retry gracefully).
    "pytest-rerunfailures>=14",
    # Property-based tests in tests/deterministic/test_property_based.py —
    # generates random book layouts and asserts invariants like
    # "iter_chapter_files count equals the count of `ch_NN.md`-only files"
    # and "next_step never returns an empty command". Catches the long
    # tail of glob/inference bugs that targeted unit tests miss.
    "hypothesis>=6",
    # JSON-schema validation for commands/*.md frontmatter shape — used
    # by tests/deterministic/test_command_schema.py to catch typos in
    # field names, wrong types, or missing required fields that the
    # body-text contract tests can't see.
    "jsonschema>=4",
]
# PR 7 export commands that touch images and audio. Users who only draft
# and revise do not need these; `autonovel doctor` reports any that are
# missing as warnings (not problems) when the corresponding external CLI
# tool is also absent.
#   cover-composite, cover-print       → Pillow
#   audiobook-assemble                 → pydub (plus ffmpeg on PATH)
#   landing                            → (no extra Python — stdlib only)
# External CLI tools the commands shell out to (install via OS package
# manager; `autonovel doctor` enumerates what's missing):
#   tectonic     — PDF (typeset)
#   pandoc       — ePub (typeset)
#   potrace      — SVG vectorisation (art-vectorize)
#   ffmpeg       — m4b audiobook output (audiobook-assemble --format m4b)
#   rsvg-convert — SVG → PDF for print-quality ornaments (typeset --convert-vectors)
#   fontconfig   — EB Garamond / Bebas Neue lookup (cover-composite, cover-print)
export = [
    "Pillow>=10.0",
    "pydub>=0.25",
]
# `autonovel tui` — read-only terminal UI for browsing series state
# (chapters / scores / research / reviews / next actions / lock /
# sweep-progress / cost). Strict opt-in: textual is a heavy dep with
# its own renderer and rich-text engine. Users who never run the TUI
# don't need it; the CLI surfaces (`autonovel status`, `autonovel
# cost`, `/autonovel:dashboard`, `/autonovel:next`) cover the same
# data without textual.
tui = [
    "textual>=0.70",
]
# Movie/teaser mode (FUTURE-TODOS; docs/prd-movie-teaser-mode.md).
# Reserved opt-in extras for later phases. Phase 0 + the `treatment`
# command need NO extra deps (pure prose + stdlib), so these stay empty
# for now — they exist so the install surface is named and stable.
# `[video]` pulls the optional teaser deps; `[scripts]` will pull
# screenplay-format exporters. Base install and existing extras are
# unaffected (the teaser render/VO backends all import their SDK lazily and
# fall back to the offline `stub`, so the base CLI never needs these).
#   edge-tts — FREE, no-API-key voiceover for `teaser-vo --provider edge`
#              (the narration spine of a `short`). Microsoft Edge's online
#              neural TTS; the paid alternative is ElevenLabs (same account
#              as the audiobook pipeline), and `stub` makes a silent WAV
#              offline for $0. ffmpeg (already listed) lays the track under
#              the cut at `teaser-assemble --narration`.
video = [
    "edge-tts>=6",
]
scripts = []

[project.scripts]
autonovel = "autonovel.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autonovel"]

[tool.hatch.build.targets.wheel.force-include]
"src/autonovel/templates" = "autonovel/templates"
"src/autonovel/validators/command_schema.json" = "autonovel/validators/command_schema.json"
"commands" = "autonovel/commands"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: Tier-3 smoke tests (costs money; opt-in)",
    "regression: Tier-4 evaluator regression (costs money; opt-in)",
    "genre(name): mark a smoke test with a genre label",
    "pipx_install: Tier-3 install test against a clean pipx home (slow; opt-in)",
]
